# mgs_voice_player

./: CMakeLists.txt  Main.qml  README.md  Theme.qml  VagConverter.cpp  VagConverter.h  VoxManager.cpp  VoxManager.h  VoxPlayer.qml  app_icon.qrc  app_icon.rc  font.h  main.cpp  resources.qrc
widgets/: CodecChara.qml
